--- a/Quotify/Quotify-Info.plist
+++ b/Quotify/Quotify-Info.plist
@@ -14,8 +14,8 @@
 	<string></string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>icon.png</string>
-		<string>Quotify_logo_small.png</string>
+		<string>icon114.png</string>
+		<string>icon57.png</string>
 		<string>Quotify_logo_small.png</string>
 	</array>
 	<key>CFBundleIcons</key>
@@ -24,8 +24,8 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>icon.png</string>
-				<string>Quotify_logo_small.png</string>
+				<string>icon114.png</string>
+				<string>icon57.png</string>
 				<string>Quotify_logo_small.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
