Mixpanel: Track "Quotify Pressed"
Also added our Mixpanel token to the AppDelegate

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 Quotify.xcodeproj/project.xcworkspace/xcuserdata/maxrosenblatt.xcuserdatad/UserInterfaceState.xcuserstate
 
 Quotify.xcodeproj/project.xcworkspace/xcuserdata/maxrosenblatt.xcuserdatad/UserInterfaceState.xcuserstate
+
+*.xcuserstate
